--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://chat:OFncRZH7RfkT1if2@cluster0.5hvh4gr.mongodb.net/chat-app"
+NEXTAUTH_SECRET="nextauth123"
